automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,3 +11,12 @@
     <%= f.submit %>
   </div>
 <% end %>
+ 
+<script type="text/javascript" charset="utf-8">
+  $(function () {
+    $('form').submit(function(event) {
+      event.preventDefault();
+      alert("we r hack3rz");
+    });
+  });
+</script>
