--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,7 +16,14 @@
   $(function () {
     $('form').submit(function(event) {
       event.preventDefault();
-      alert("we r hack3rz");
+
+      var values = $(this).serialize();
+
+      var posting = $.post('/posts', values);
+
+      posting.done(function(data) {
+        // TODO: handle response
+      });
     });
   });
 </script>
