automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,7 +22,7 @@
       var posting = $.post('/posts', values);
 
       posting.done(function(data) {
-        // TODO: handle response
+        console.log(data);
       });
     });
   });
